--- a/DEMO_DATAENGINEERINGPIPELINEWITHPANDASONSNOWFLAKE_NOTEBOOK/Data_Engineering_Pipeline_with_pandas_on_Snowflake.ipynb
+++ b/DEMO_DATAENGINEERINGPIPELINEWITHPANDASONSNOWFLAKE_NOTEBOOK/Data_Engineering_Pipeline_with_pandas_on_Snowflake.ipynb
@@ -18,12 +18,12 @@
    "version": "3.9.19"
   },
   "lastEditStatus": {
-   "notebookId": "7kd5nlfvnjphbq4bdzoy",
+   "notebookId": "mjbb3lxayzkk3m4e4nl2",
    "authorId": "1123470975911",
    "authorName": "DDEV",
    "authorEmail": "deepjyoti.dev@snowflake.com",
-   "sessionId": "329911b1-3de7-4926-9386-7353bc5e8e39",
-   "lastEditTime": 1737404525150
+   "sessionId": "f3a3ee59-08f7-4916-82ba-51a89c309365",
+   "lastEditTime": 1737539295362
   }
  },
  "nbformat_minor": 2,
@@ -37,7 +37,7 @@
     "name": "intro_md",
     "resultHeight": 641
    },
-   "source": "### Data Engineering Pipelines with pandas on Snowflake\n\nThis demo is using the [Snowflake Sample TPC-H dataset](https://docs.snowflake.com/en/user-guide/sample-data-tpch) that should be in a shared database named `SNOWFLAKE_SAMPLE_DATA`. You can run this notebook in a Snowflake Notebook. \n\nDuring this demo you will learn how to use [pandas on Snowflake](https://docs.snowflake.com/developer-guide/snowpark/python/snowpark-pandas) to:\n* Create datframe from a Snowflake table\n* Aggregate and transform data to create new features\n* Save the result into a Snowflake table\n* Create a serverless task to schedule the feature engineering\n\npandas on Snowflake is delivered through the Snowpark pandas API as part of the Snowpark Python library (preinstalled with Snowflake Notebooks), which enables scalable data processing of Python code within the Snowflake platform. \n\nStart by adding neccessary libraries using the `Packages` dropdown, the additional libraries needed for this notebook is: \n* `modin` (select version 0.28.1)\n* `snowflake`\n* `matplotlib`\n* `seaborn`\n\nPlease note that the \"Run All\" option will not work for this notebook because we are creating a serverless task. Once the task is resumed, you need to wait for it to succeed before proceeding to the next step. You can check the task status in the cell labeled `task_status`. Alternatively, you can navigate to this cell, execute run all above, wait for the task status to indicate success, and then run the remaining cells."
+   "source": "### Data Engineering Pipelines with pandas on Snowflake\n\nThis demo is using the [Snowflake Sample TPC-H dataset](https://docs.snowflake.com/en/user-guide/sample-data-tpch) that should be in a shared database named `SNOWFLAKE_SAMPLE_DATA`. You can run this notebook in a Snowflake Notebook. \n\nDuring this demo you will learn how to use [pandas on Snowflake](https://docs.snowflake.com/developer-guide/snowpark/python/snowpark-pandas) to:\n* Create dataframe from a Snowflake table\n* Aggregate and transform data to create new features\n* Save the result into a Snowflake table\n* Create a serverless task to schedule the feature engineering\n\npandas on Snowflake is delivered through the Snowpark pandas API as part of the Snowpark Python library (preinstalled with Snowflake Notebooks), which enables scalable data processing of Python code within the Snowflake platform. \n\nStart by adding neccessary libraries using the `Packages` dropdown, the additional libraries needed for this notebook is: \n* `modin` (select version 0.28.1)\n* `snowflake`\n* `matplotlib`\n* `seaborn`\n\nPlease note that the \"Run All\" option will not work for this notebook because we are creating a serverless task. Once the task is resumed, you need to wait for it to succeed before proceeding to the next step. You can check the task status in the cell labeled `task_status`. Alternatively, you can navigate to this cell, execute run all above, wait for the task status to indicate success, and then run the remaining cells."
   },
   {
    "cell_type": "code",
